# CS244-oncache

./: .gitignore  .gitmodules  README.md  benchmark.py  cloudlab_manifest.xml  mise.toml  plot.py  requirements.txt
baremetal/: benchmark.py  parse.py
config/: baremetal.toml  benchmark.toml  ip.toml
k8s/: benchmark.py  parse.py
kubernetes/: .gcloudignore  Dockerfile  README.md  bench.sh  requirements.txt  run_benchmark.py
oncache/: Makefile  setup.sh
oncache/oncached/: Cargo.toml
oncache/oncached/src/: main.rs
results/: baremetal_output.csv  k8s_output_antrea.csv  k8s_output_cilium.csv  tcp_baremetal_output.csv  tcp_baremetal_output_cloudlab.csv  tcp_baremetal_output_cloudlab_ubuntu20.csv  tcp_k8s_output_antrea_cloudlab.csv  tcp_k8s_output_antrea_cloudlab_ubuntu20.csv  tcp_k8s_output_antrea_gcp.csv  tcp_k8s_output_cilium.csv  tcp_k8s_output_cilium_1-16_tuned_cloudlab.csv  tcp_k8s_output_cilium_1-17_tuned_cloudlab.csv  tcp_k8s_output_cilium_cloudlab.csv  tcp_k8s_output_oncache.csv  tcp_k8s_output_oncache_cloudlab.csv  udp_baremetal_output.csv  udp_baremetal_output_cloudlab.csv  udp_baremetal_output_cloudlab_ubuntu20.csv  udp_k8s_output_antrea_cloudlab.csv  udp_k8s_output_antrea_cloudlab_ubuntu20.csv  udp_k8s_output_cilium.csv  udp_k8s_output_cilium_1-16_cloudlab.csv  udp_k8s_output_cilium_1-16_tuned_cloudlab.csv  udp_k8s_output_cilium_cloudlab.csv  udp_k8s_output_oncache.csv  udp_k8s_output_oncache_cloudlab.csv
scripts/: antrea_install.sh  antrea_uninstall.sh  cilium_install.sh  cilium_install_1-16.sh  cilium_install_1-17.sh  cilium_uninstall.sh  setup.sh  (+13 more)
(+75 files in other folders)
