[package]
name = "oncached"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
aya = "0.13.1"
aya-log = "0.2.1"
clap = { version = "4.5.38", features = ["derive"] }
libc = "0.2.172"
network-types = "0.0.8"
proc-bitfield = "0.5.2"
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
